--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=4000
-DATABASE_URL=postgres://myuser:mypass@localhost:5432/mydb
+DB_USER=postgres
+DB_PASSWORD=Mc13597.
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=KURAKLIK
